--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -141,6 +141,11 @@
       .container
         = render 'layouts/header', { :external => false }
       = render 'layouts/title_bar'
+      .container
+        - flash.each do |name, msg|
+          %div{class: "alert alert-#{name == :notice ? 'success' : 'error'}"}
+            %button.close{type: 'button', data: {dismiss: 'alert'}} x
+            = msg
       = yield
       = render 'layouts/footer'
     -# JS
