--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -2,11 +2,12 @@
   .box.box-solo
     - if params[:aw]
       %h3 Looks like you've already signed up for our newsletter!
-      %h5 Enter your email and we'll send you a default password.
+      %h5= "Click below and we'll send a default password to #{params[:email]}." 
     - else
       %h2 Forgot your password?
       %h5 Enter your email for password reset instructions.
-    %hr
     = form_for @user, url: password_path(@user) do |f|
-      .box-field= f.text_field :email, value: params[:email], placeholder: 'email', required: true
+      - unless params[:aw]
+        %hr
+        .box-field= f.text_field :email, value: params[:email], placeholder: 'email', required: true
       .box-field= f.submit 'Send Instructions', class: 'btn btn-primary'
