--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -3,7 +3,7 @@
     %h3 Change your password
     %hr
     = form_for @user, url: password_path(@user), method: :put do |f|
-      = devise_error_messages!
+      = render 'shared/error_messages', target: f
       = f.hidden_field :reset_password_token
       .box-field= f.password_field :password, placeholder: 'New password', required: true
       .box-field= f.password_field :password_confirmation, placeholder: 'Confirm new password', required: true
