--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,10 +5,7 @@
     %hr
     .registration.standard
       = form_for @user, url: registration_path(@user), html: {class: 'form-horizontal'} do |f|
-        - if @user.errors.any?
-          .alert.alert-error
-            - @user.errors.messages.each do |name,message|
-              %div= message[0]
+        = render 'shared/error_messages', target: f
         .control-group
           .control-label= f.label :name
           .controls= f.text_field :name
