Added a signup link to sign in page and a redirect to current page after signup

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,10 @@
 .container
   .box.box-full
-    %h2 Almost done!
-    %h5 Please fill out the following to complete your registration:
+    - if params[:email]
+      %h2 Almost done!
+      %h5 Please fill out the following to complete your registration:
+    - else
+      %h3 Please fill out the following to complete your registration:
     %hr
     .registration.standard
       = form_for @user, url: registration_path(@user), html: {class: 'form-horizontal'} do |f|
