--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,10 @@
               Course
             - else
               = link_to 'Course', course_url('accelerated-sous-vide-cooking-course')
+
+          %li
+            = link_to 'Recipes', recipe_gallery_index_url
+
           %li
             = link_to 'Forum', 'http://forum.chefsteps.com'
 
