--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -22,11 +22,12 @@
           %li
             = link_to 'Blog', 'http://blog.chefsteps.com'
 
-          %li
+          %li{class: ('last' if external)}
             = link_to 'Shop', 'http://store.chefsteps.com'
 
-          %li.last
-            = link_to 'Search', search_index_url
+          - unless external
+            %li.last
+              = link_to 'Search', search_index_url
 
       .navbar.noprint
         %ul.nav.social
