--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -18,7 +18,7 @@
         padding: 7px 0px
         line-height: 20px
       p
-        margin: 0px
+        margin: 10px 0px
   .step-img-col
     float: right
     width: 50%
