--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -3,7 +3,7 @@
   - disqus_id = "activity-#{activity.id}"
 
   - content_for :title, activity.title.html_safe
-  - content_for :description, activity.description != "" ? activity.description.html_safe : activity.title.html_safe
+  / - content_for :description, activity.description != "" ? activity.description.html_safe : activity.title.html_safe
   - content_for :canonical_link, activity_url
   - content_for :keywords, activity.tag_list.join(',')
   - course = Course.find(params[:course_id]) if params[:course_id]
