--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -231,6 +231,7 @@
       float: left
 
   .step
+    border-top: 1px solid gray
     .step-directions-col
       width: 100%
       padding: 10px 20px 20px
