--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -9,4 +9,4 @@
 #quiz-results.container
   = render 'quizzes/multiple_choice_question_results', results: quiz_results[:multiple_choice]
   = render 'quizzes/box_sort_question_results', results: quiz_results[:box_sort]
-
+  = render 'quizzes/order_sort_question_results', results: quiz_results[:order_sort]
