--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,8 +1,8 @@
-.results-header.row
-  .span6
-    .center
-      Multiple Choice Questions:
+- if !results.empty?
+  .results-header.row
+    .span6
+      .center
+        Multiple Choice Questions:
 
-- results.each_with_index do |result, index|
-  = render 'quizzes/multiple_choice_question_result', result: result, count: index + 1
-
+  - results.each_with_index do |result, index|
+    = render 'quizzes/multiple_choice_question_result', result: result, count: index + 1
