step photos aligned to the bottom

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -232,11 +232,14 @@
 
   .step
     border-top: 1px solid gray
+    margin: 10px 0px
     .step-directions-col
       width: 100%
-      padding: 10px 20px 20px
+      padding: 10px 0px
     .step-img-col
       width: 100%
+      .step-image
+        position: relative
 
   .activity-hero
     h1
