--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -9,7 +9,8 @@
     text-transform: uppercase
   p
     +font-sans-medium
-    margin: 20px 20px
+    font-size: 18px
+    margin: 20px 0px
   .horizontal-divider
     margin: 10px 0
   .difficulty
