--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -6,10 +6,13 @@
   float: left
   width: 100%
   line-height: 20px
+  position: relative
+  min-height: 329px
   .step-directions-col
     float: left
     width: 50%
-    padding: 10px 50px 20px 20px
+    //padding: 10px 50px 20px 20px
+    padding-right: 50px
     @include boxsizing
     .step-directions
       line-height: 20px
@@ -24,6 +27,8 @@
     float: right
     width: 50%
     .step-image
+      position: absolute
+      bottom: 0px
       img
         @include shadow
     .video-container
