add audio to steps

--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -36,6 +36,10 @@
       .step-directions
         :markdown
           #{raw step.directions}
+    - if step.audio_clip?
+      %h2 Audio Clip
+      %p
+        =s3_audio_url(step.audio_clip)
   .step-img-col
     - if step.youtube_id?
       .video.noprint
