fix firefox image

--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -29,6 +29,7 @@
     .step-image
       position: absolute
       bottom: 0px
+      width: 50%
       img
         @include shadow
     .video-container
