ability to add audio to steps in the admin

--- a/app/assets/stylesheets/application.css.sass.erb
+++ b/app/assets/stylesheets/application.css.sass.erb
@@ -43,6 +43,7 @@
 @import application/responsiveslides
 @import application/video
 @import application/box
+@import application/audio
 
 
 @font-face
