--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -39,7 +39,10 @@
         %th Title
         %th Directions (Markdown or HTML)
         %th Image Id
+        %th Image Description
         %th Youtube Id
+        %th Audio Clip
+        %th Audio Title
       = render 'admin/recipes/step_form', step: nil, field_name_prefix: field_name_prefix
       - @activity.ordered_steps.each do |step|
         = render 'admin/recipes/step_form', step: step, field_name_prefix: field_name_prefix
