--- a/app/views/activities/_step.html.haml
+++ b/app/views/activities/_step.html.haml
@@ -37,8 +37,9 @@
         :markdown
           #{raw step.directions}
     - if step.audio_clip?
-      %h2 Audio Clip
-      %p
+      .audio
+        %h4= step.audio_title? ? step.audio_title : 'Audio Clip'
+        %p
         =s3_audio_url(step.audio_clip)
   .step-img-col
     - if step.youtube_id?
