add images to activities

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -43,6 +43,8 @@
     font-size: 36px
   .video-container
     @include shadow
+  .activity-image
+    @include shadow
 
 .hero-comments
   margin-bottom: 0
