--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -25,6 +25,10 @@
                   transcript
               .transcript-content.collapse{id: "transcript-activity-#{activity.id}"}
                 = activity.transcript
+        - else
+          - if activity.image_id?
+            .activity-image
+              = image_tag s3_image_url(activity.image_id)
 
     = render 'overview', activity: activity
     -if activity.steps.any? || activity.recipe_steps.any?
