first try, need to push to see in a real reader

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,6 +41,8 @@
     -# ==========================================================================
 
     -# %link{:rel => "alternate", :type => "application/rss+xml", :title => "RSS", :href => "http://feeds.feedburner.com/FEEDNAME"}
+    = auto_discovery_link_tag :atom, "/feed"
+    = auto_discovery_link_tag :rss, "/feed.rss"
 
     -# Favicon
     -# ==========================================================================
