--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -39,6 +39,8 @@
             %a.icon-pinterest{ href: "http://pinterest.com/chefsteps/" }
           %li
             %a.icon-google-plus{ href: "https://plus.google.com/106370441183974123730/posts" }
+          %li
+            %a.icon-rss{ href: "http://feeds.feedburner.com/ChefSteps" }
 
       - unless user_signed_in? or external
         .navbar.noprint
