--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -36,7 +36,7 @@
           %li
             %a.icon-google-plus{ href: "https://plus.google.com/106370441183974123730/posts" }
           %li
-            %a.icon-rss{ href: "http://feeds.feedburner.com/ChefSteps" }
+            %a.icon-rss{ href: feed_url }
           - unless external
             %li
               %a.icon-search{ href: search_index_url }
