--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,8 +40,8 @@
     -# RSS
     -# ==========================================================================
 
-    = auto_discovery_link_tag :atom, "http://feeds.feedburner.com/ChefSteps"
-    = auto_discovery_link_tag :rss, "http://feeds.feedburner.com/ChefSteps"
+    = auto_discovery_link_tag :atom, feed_path
+    = auto_discovery_link_tag :rss, feed_path
 
     -# Favicon
     -# ==========================================================================
