--- a/app/views/admin/recipes/_form.html.haml
+++ b/app/views/admin/recipes/_form.html.haml
@@ -17,8 +17,6 @@
   = section("Steps", f) do
     %li.two-button-row
       = copy_button 'Add Step', '#step-row', 'table#steps'
-      - unless @recipe.id.nil?
-        = admin_button 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe)
     = sortable_table('steps') do
       %tr
         %th Title
@@ -26,13 +24,13 @@
         %th Image Id
         %th Image Description
         %th Youtube Id
+        %th Audio Clip
+        %th Audio Title
       = render 'step_form', step: nil
       - @recipe.ordered_steps.each do |step|
         = render 'step_form', step: step
     %li.two-button-row
       = copy_button 'Add Step', '#step-row', 'table#steps'
-      - unless @recipe.id.nil?
-        = admin_button 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe)
 
   = f.actions do
     = f.action :submit
