--- a/app/views/admin/recipes/_step_form.html.haml
+++ b/app/views/admin/recipes/_step_form.html.haml
@@ -23,8 +23,12 @@
   %td= text_field_tag "#{field_name_prefix}[image_id]", image_id
   %td= text_area_tag "#{field_name_prefix}[image_description]", image_description, rows: 5
   %td= text_field_tag "#{field_name_prefix}[youtube_id]", youtube_id
-  %td= text_field_tag "#{field_name_prefix}[audio_clip]", audio_clip
-  %td= text_field_tag "#{field_name_prefix}[audio_title]", audio_title
+  %td= text_field_tag "#{field_name_prefix}[audio_clip]", audio_clip, placeholder: 'example.wav'
+  %td= text_field_tag "#{field_name_prefix}[audio_title]", audio_title, placeholder: 'Example Title'
   %td
     = remove_button 'tr'
     = reorder_icon
+
+- if step
+  %li.two-button-row
+    = admin_button 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe)
