update signup and take me to the course buttons

--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -89,6 +89,10 @@
             color: black
             &:hover
               color: white
+    .sign-in-button
+      position: absolute
+      top: 2px
+      right: 0px
 
 // This stuff applies to both the global nav bar and the sticky navbar
 .navbar
