--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -1,4 +1,5 @@
 .signup-banner
+  background-color: $brick
   margin-bottom: 16px
   h2, h3
     line-height: 1em
@@ -8,7 +9,6 @@
     +font-sans-medium
     color: $brickLight
   .button
-    margin-right: -28px
     margin-top: 3px
   &.gray
     h3
