--- a/app/views/admin/recipes/_step_form.html.haml
+++ b/app/views/admin/recipes/_step_form.html.haml
@@ -29,6 +29,6 @@
     = remove_button 'tr'
     = reorder_icon
 
-- if step
+- if step && @recipe
   %li.two-button-row
     = link_to 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe), class: 'admin-button update-warning'
