--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,64 +1,118 @@
 #header
-  .row.global-navigation
-    .span12
-      .brand-container
-        %a.brand{href: root_url, target: '_top'}
+  .navbar
+    .navbar-inner
+      .container
+        = link_to root_url, class: 'brand' do
           = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
-
-      .navbar
-        %ul.nav.noprint
-          %li
-            - if current_page?(course_url('accelerated-sous-vide-cooking-course'))
-              Course
-            - else
-              = link_to 'Course', course_url('accelerated-sous-vide-cooking-course')
-
-          %li
-            = link_to 'Recipes', recipe_gallery_index_url
-
-          %li
-            = link_to 'Forum', 'http://forum.chefsteps.com'
-
-          %li
-            = link_to 'Blog', 'http://blog.chefsteps.com'
-
-          %li.last
-            = link_to 'Shop', 'http://store.chefsteps.com'
-
-      .navbar.noprint
-        %ul.nav.social
-          %li
-            %a.icon-facebook{ href: "https://www.facebook.com/Chefsteps" }
-          %li
-            %a.icon-twitter{ href: "http://twitter.com/@chefsteps" }
-          %li
-            %a.icon-pinterest{ href: "http://pinterest.com/chefsteps/" }
-          %li
-            %a.icon-google-plus{ href: "https://plus.google.com/106370441183974123730/posts" }
-          %li
-            %a.icon-rss{ href: feed_url }
-          - unless external
+        .nav-collapse.collapse
+          %ul.nav
             %li
-              %a.icon-search{ href: search_index_url }
-
-
-      - unless user_signed_in? or external
-        .navbar.noprint
-          %ul.nav.subscribe
+              = link_to 'Course', course_url('accelerated-sous-vide-cooking-course')
+            %li
+              = link_to 'Recipes', recipe_gallery_index_url
+            %li
+              = link_to 'Forum', 'http://forum.chefsteps.com'
+            %li
+              = link_to 'Blog', 'http://blog.chefsteps.com'
+            %li
+              = link_to 'Shop', 'http://store.chefsteps.com'
+            %li
+              = link_to 'https://www.facebook.com/Chefsteps', target: 'blank' do
+                .icon-facebook
+            %li
+              = link_to 'http://twitter.com/@chefsteps', target: 'blank' do
+                .icon-twitter
+            %li
+              = link_to 'http://pinterest.com/chefsteps/', target: 'blank' do
+                .icon-pinterest
+            %li
+              = link_to 'https://plus.google.com/106370441183974123730/posts', target: 'blank' do
+                .icon-google-plus
+            %li
+              = link_to feed_url do
+                .icon-rss
+            - unless external
+              %li
+                = link_to search_index_url do
+                  .icon-search
             %li
               = render 'mailing_list/subscribe'
+        - if user_signed_in?
+          .dropdown#user-dropdown
+            = link_to '#', data: {toggle: 'dropdown'} do
+              = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
+            %ul.dropdown-menu
+              %li= link_to 'Profile', user_profile_path(current_user)
+              %li= link_to 'Sign out', destroy_user_session_path, method: :delete
+        - elsif request.path != sign_in_path
+          .sign-in-button
+            = link_to sign_in_path do
+              .btn.btn-primary Sign in
+        = link_to '', class: 'btn btn-navbar', data: {toggle:'collapse', target: '.nav-collapse'} do
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
 
-      -unless external
-        .navbar.user-auth.noprint
-          - if user_signed_in?
-            .dropdown#user-dropdown
-              = link_to '#', data: {toggle: 'dropdown'} do
-                = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
-              %ul.dropdown-menu
-                %li= link_to 'Profile', user_profile_path(current_user)
-                %li= link_to 'Sign out', destroy_user_session_path, method: :delete
-          - elsif request.path != sign_in_path
-            .sign-in-button
-              = link_to sign_in_path do
-                .btn.btn-primary Sign in
+  / .row.global-navigation
+  /   .span12
+  /     .brand-container
+  /       %a.brand{href: root_url, target: '_top'}
+  /         = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
+
+  /     .navbar#menu
+  /       %ul.nav.noprint
+  /         %li
+  /           - if current_page?(course_url('accelerated-sous-vide-cooking-course'))
+  /             Course
+  /           - else
+  /             = link_to 'Course', course_url('accelerated-sous-vide-cooking-course')
+
+  /         %li
+  /           = link_to 'Recipes', recipe_gallery_index_url
+
+  /         %li
+  /           = link_to 'Forum', 'http://forum.chefsteps.com'
+
+  /         %li
+  /           = link_to 'Blog', 'http://blog.chefsteps.com'
+
+  /         %li.last
+  /           = link_to 'Shop', 'http://store.chefsteps.com'
+
+  /     .navbar.noprint#social
+  /       %ul.nav.social
+  /         %li
+  /           %a.icon-facebook{ href: "https://www.facebook.com/Chefsteps" }
+  /         %li
+  /           %a.icon-twitter{ href: "http://twitter.com/@chefsteps" }
+  /         %li
+  /           %a.icon-pinterest{ href: "http://pinterest.com/chefsteps/" }
+  /         %li
+  /           %a.icon-google-plus{ href: "https://plus.google.com/106370441183974123730/posts" }
+  /         %li
+  /           %a.icon-rss{ href: feed_url }
+  /         - unless external
+  /           %li
+  /             %a.icon-search{ href: search_index_url }
+
+
+  /     - unless user_signed_in? or external
+  /       .navbar.noprint#subscribe
+  /         %ul.nav.subscribe
+  /           %li
+  /             = render 'mailing_list/subscribe'
+
+  /     -unless external
+  /       .navbar.user-auth.noprint#user-auth
+  /         - if user_signed_in?
+  /           .dropdown#user-dropdown
+  /             = link_to '#', data: {toggle: 'dropdown'} do
+  /               = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
+  /             %ul.dropdown-menu
+  /               %li= link_to 'Profile', user_profile_path(current_user)
+  /               %li= link_to 'Sign out', destroy_user_session_path, method: :delete
+  /         - elsif request.path != sign_in_path
+  /           .sign-in-button
+  /             = link_to sign_in_path do
+  /               .btn.btn-primary Sign in
 
