--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -107,11 +107,55 @@
 .global-navigation .navbar .nav
   float: none
 
-.navbar .nav > li > a
-  color: $brick
-  padding: 0
-  text-shadow: none
+//.navbar .nav > li > a
+//  color: $brick
+//  padding: 0
+//  text-shadow: none
 
 .navbar .nav > li.active > a
   background: none
   color: #111
+
+#header
+  margin: 10px 0px
+  .brand
+    float: left
+  .nav-container
+    float: left
+    margin-top: 15px
+    li
+      display: inline-block
+  #menu-toggle
+    display: none
+    font-size: 24px
+    color: $brick
+    text-align: right
+    margin-top: 15px
+
+@media (max-width: 480px)
+  #header
+    .nav-container
+      position: absolute
+      margin-top: 0px
+      top: 10px
+      right: 10px
+      z-index: 9999
+      ul
+        margin: 0px
+        padding: 0px
+        width: 200px
+        margin-top: 5px
+        background-color: white
+        @include shadow
+      .nav-item
+        display: block
+        clear: both
+        padding: 10px 15px
+      .social
+        display: none
+      .user
+        display: none
+    #menu-toggle
+      display: block
+    ul
+      display: none
