--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -139,10 +139,12 @@
       margin-left: 5px
   #menu-toggle
     display: none
-    font-size: 24px
+    font-size: 30px
     color: $brick
     text-align: right
-    margin-top: 15px
+    position: absolute
+    top: 24px
+    right: 10px
     &:hover
       cursor: pointer
 
@@ -153,6 +155,11 @@
       top: 10px
       right: 10px
       z-index: 9999
+      #collapsible
+        position: absolute
+        top: 50px
+        right: 10px
+        z-index: 9999
       ul
         float: right
         margin: 0px
