--- a/app/assets/stylesheets/application/_custom_mixins.css.sass
+++ b/app/assets/stylesheets/application/_custom_mixins.css.sass
@@ -38,3 +38,9 @@
   -moz-box-box-shadow: 0px 0px 8px #888888
   -webkit-box-shadow: 0px 0px 8px #888888
   -o-box-shadow: 0px 0px 8px #888888
+
+=deep-shadow
+  box-shadow: 0px 10px 20px black
+  -moz-box-box-shadow: 0px 10px 20px black
+  -webkit-box-shadow: 0px 10px 20px black
+  -o-box-shadow: 0px 10px 20px black
