--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -44,20 +44,20 @@
         = link_to search_index_url do
           %li.social
             .icon-search
-      %li.user
-        - if user_signed_in?
-          .dropdown#user-dropdown
-            = link_to '#', data: {toggle: 'dropdown'} do
-              = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
-            %ul.dropdown-menu
-              %li= link_to 'Profile', user_profile_path(current_user)
-              %li= link_to 'Sign out', destroy_user_session_path, method: :delete
-        - elsif request.path != sign_in_path
-          .sign-in-button
-            = link_to sign_in_path do
-              .btn.btn-primary Sign in
-      %li.user
-        = render 'mailing_list/subscribe'
+    %li.user.user-auth
+      - if user_signed_in?
+        .dropdown#user-dropdown
+          = link_to '#', data: {toggle: 'dropdown'} do
+            = gravatar_image_tag(current_user.email, alt: current_user.name, gravatar: { default: 'http://www.chefsteps.com/assets/default_avatar.png'})
+          %ul.dropdown-menu
+            %li= link_to 'Profile', user_profile_path(current_user)
+            %li= link_to 'Sign out', destroy_user_session_path, method: :delete
+      - elsif request.path != sign_in_path
+        .sign-in-button
+          = link_to sign_in_path do
+            .btn.btn-primary Sign in
+    %li.user
+      = render 'mailing_list/subscribe'
 
   / .row.global-navigation
   /   .span12
