big checkpoint - much working

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -177,7 +177,7 @@ body.admin_namespace
     width: auto
 
 
-.admin_recipes.associated_ingredients
+.admin_activities.associated_ingredients
   .step-ingredients
     li
       margin-left: 20px
