--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -13,7 +13,7 @@
           %i.icon-question-sign
 
   %tbody
-    - recipe.ingredients.each do |ingredient|
+    - activity.ingredients.each do |ingredient|
       %tr
         %td
           - if ingredient.product_url?
