--- a/app/views/admin/tasks/_task_list.html.haml
+++ b/app/views/admin/tasks/_task_list.html.haml
@@ -1,12 +1,7 @@
 %p
   = task_button 'Create display quantities', admin_tasks_create_display_quantities_path
-  Copies the decimal value of quantity in StepIngredient and RecipeIngredient
+  Copies the decimal value of quantity of ingredients
   into the display_quantity field.
-
-%p
-  = task_button 'Update activity recipe steps', admin_tasks_update_activity_recipe_steps_path
-  Ensure that the ActivityRecipeStep models are setup for all steps associated with activities
-  via recipes.
 
 %p
   = task_button 'Create new copy entries', admin_tasks_create_new_copy_path
@@ -17,3 +12,6 @@
 
 %p
   = task_button 'Create activity slugs', admin_tasks_create_activity_slugs_path
+
+%p
+  = task_button 'Verify model change assumptions', admin_tasks_verify_model_change_assumptions_path
