--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -139,7 +139,7 @@
         width: 40px
   #menu-toggle
     display: none
-    font-size: 30px
+    font-size: 36px
     color: $brick
     text-align: right
     position: absolute
@@ -196,6 +196,7 @@
         display: block
         float: right
         width: 100px
+        margin-top: 9px
     #menu-toggle
       display: block
     ul
