--- a/app/assets/stylesheets/application/_header.css.sass
+++ b/app/assets/stylesheets/application/_header.css.sass
@@ -135,6 +135,7 @@
       float: right
       margin-left: 5px
     .user-auth
+      margin-top: 10px
       img
         width: 40px
   #menu-toggle
